--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,6 @@ deps = -r{toxinidir}/test-requirements.txt
 commands = {posargs}
 
 [testenv:docs]
-commands = python setup.py build_sphinx
+# TODO: Upgrade to -W when we have at least one idea merged.
+commands = sphinx-build -v -b html -d doc/build/doctrees doc/source doc/build/html
+#commands = sphinx-build -v -W -b html -d doc/build/doctrees doc/source doc/build/html
