Switch to newer openstackdocstheme version
Switch to openstackdocstheme 2.2.1 version. Using
this version will allow especially:
* Linking from HTML to PDF document
* Allow parallel building of documents
* Fix some rendering problems

Update Sphinx version as well.

Disable openstackdocs_auto_version to not auto-version the documents.

Disable openstackdocs_auto_name to use 'project' variable as name.

Change pygments_style to 'native' since old theme version always used
'native' and the theme now respects the setting and using 'sphinx' can
lead to some strange rendering.

openstackdocstheme renames some variables, so follow the renames
before the next release removes them. A couple of variables are also
not needed anymore, remove them.

See also
http://lists.openstack.org/pipermail/openstack-discuss/2020-May/014971.html

Enable warnings now that the repo has one idea.

Change-Id: I821ae47ced7542d7d5cbd554a4bc6919cf5d181c

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = docs
-minversion = 1.6
+minversion = 3.2.0
 skipsdist = True
 
 [testenv]
@@ -12,6 +12,4 @@ deps = -r{toxinidir}/test-requirements.txt
 commands = {posargs}
 
 [testenv:docs]
-# TODO: Upgrade to -W when we have at least one idea merged.
-commands = sphinx-build -v -b html -d doc/build/doctrees doc/source doc/build/html
-#commands = sphinx-build -v -W -b html -d doc/build/doctrees doc/source doc/build/html
+commands = sphinx-build -v -W -b html -d doc/build/doctrees doc/source doc/build/html
